Added date filter to date elements

--- a/src/app/csp-form/csp-form.component.html
+++ b/src/app/csp-form/csp-form.component.html
@@ -41,7 +41,7 @@
         <md-input-container class="csp-full-width-height">
           <textarea #csp mdInput mdTextareaAutosize readonly>What is the reported Service Issue?: {{model.issue}}
 
-Date when issue first surfaced: {{model.date}}
+Date when issue first surfaced: {{model.date | date: 'mediumDate'}}
 
 IPTV Only: {{model.iptv}}
 
