--- a/src/app/loyalty-form/loyalty-form.component.html
+++ b/src/app/loyalty-form/loyalty-form.component.html
@@ -46,7 +46,7 @@
 
 Invoice Number: {{model.invoice}}
 
-Date Invoice Paid: {{model.date}}
+Date Invoice Paid: {{model.date | date: 'mediumDate'}}
 
 Amount Paid: ${{model.amountPaid}}
 
