Fixed missing date filter for missing payment  template

--- a/src/app/payment-form/payment-form.component.html
+++ b/src/app/payment-form/payment-form.component.html
@@ -43,7 +43,7 @@
         <md-input-container class="payment-full-width">
           <textarea #payment mdInput mdTextareaAutosize readonly>Invoice Number: {{model.invoice}}
 
-Date Invoice Paid: {{model.date}}
+Date Invoice Paid: {{model.date | date: 'mediumDate'}}
 
 Amount Paid: ${{model.amount}}
 
