Removed unneeded white space from the end of the template

--- a/src/app/highspeed-form/highspeed-form.component.html
+++ b/src/app/highspeed-form/highspeed-form.component.html
@@ -49,8 +49,7 @@ My name is {{user.title}} {{user.lastname}} and I would be assisting with your q
 Thank you for choosing Massy Communications.
 
 Kind regards,
-{{user.firstname}} {{user.lastname}} on behalf of Massy Communications Customer Care Team
-          </textarea>
+{{user.firstname}} {{user.lastname}} on behalf of Massy Communications Customer Care Team</textarea>
         </md-input-container>
       </md-card-content>
       <md-card-actions>
