Refactored templates to use the reuseable headerbar

--- a/src/app/highspeed-form/highspeed-form.component.html
+++ b/src/app/highspeed-form/highspeed-form.component.html
@@ -1,6 +1,6 @@
-<md-toolbar color="primary">
-  <span>{{title}}</span>
-</md-toolbar>
+<headerbar>
+  <span title>{{title}}</span>
+</headerbar>
 <br>
 <div fxlayout="row">
   <div fxFlexOffset="5%" fxFlex="45%">
