--- a/src/app/addon-form/addon-form.component.html
+++ b/src/app/addon-form/addon-form.component.html
@@ -1,6 +1,6 @@
-<md-toolbar color="primary">
-  <span>{{title}}</span>
-</md-toolbar>
+<headerbar>
+  <span title>{{title}}</span>
+</headerbar>
 <br>
 <div fxLayout="row">
   <div fxFlexOffset="5%" fxFlex="45%">
