Fixed typo in old package element

--- a/src/app/relocation-form/relocation-form.component.html
+++ b/src/app/relocation-form/relocation-form.component.html
@@ -21,7 +21,7 @@
     <div fxLayout="row">
       <div fxFlex="49%">
         <md-input-container class="relocation-full-width">
-          <input [(ngModel)]="model.oldPackage" name="oldPackage" mdInput placeholder="Exsisting Package" >
+          <input [(ngModel)]="model.oldPackage" name="oldPackage" mdInput placeholder="Existing Package" >
         </md-input-container>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
