--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -1,3 +1,22 @@
 <md-toolbar color="primary">
   <ng-content select="[title]"></ng-content>
+  <span class="toolbar-spacer"></span>
+  
+  <button md-icon-button [mdMenuTriggerFor]="menu">
+      <md-icon>more_vert</md-icon>
+    </button>
+    <md-menu #menu="mdMenu">
+      <button md-menu-item (click)="feederMap()">
+        <md-icon>place</md-icon>
+        <span>Feeder Map</span>
+      </button>
+      <button md-menu-item disabled>
+        <md-icon>voicemail</md-icon>
+        <span>Check voicemail</span>
+      </button>
+      <button md-menu-item>
+        <md-icon>notifications_off</md-icon>
+        <span>Disable alerts</span>
+      </button>
+    </md-menu>  
 </md-toolbar>
