Added disabled item to toolbar menu

--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -11,12 +11,12 @@
         <span>Feeder Map</span>
       </button>
       <button md-menu-item disabled>
-        <md-icon>voicemail</md-icon>
-        <span>Check voicemail</span>
+        <md-icon>account_circle</md-icon>
+        <span>Contact List</span>
       </button>
-      <button md-menu-item>
-        <md-icon>notifications_off</md-icon>
-        <span>Disable alerts</span>
+      <button md-menu-item disabled>
+        <md-icon>monetization_on</md-icon>
+        <span>Bundle Calculator</span>
       </button>
     </md-menu>  
 </md-toolbar>
