--- a/src/app/headerbar/headerbar.component.html
+++ b/src/app/headerbar/headerbar.component.html
@@ -10,6 +10,10 @@
         <md-icon>place</md-icon>
         <span>Feeder Map</span>
       </button>
+      <button md-menu-item (click)="surepayMap()">
+        <md-icon>place</md-icon>
+        <span>Surepay Map</span>
+      </button>
       <button md-menu-item disabled>
         <md-icon>account_circle</md-icon>
         <span>Contact List</span>
