Refactored rebate form to use the package data service for addons

--- a/src/app/rebate-form/rebate-form.component.html
+++ b/src/app/rebate-form/rebate-form.component.html
@@ -21,7 +21,7 @@
       <div fxFlexOffset="2%" fxFlex="49%">
         <br>
         <md-select multiple [(ngModel)]="model.addons" name="addons" placeholder="Additonal Packages (Movies, etc)" class="rebate-full-width">
-          <md-option *ngFor="let addon of addons" [value]="addon.value">{{ addon.value }}</md-option>
+          <md-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</md-option>
         </md-select>
       </div>
     </div>
