--- a/src/app/updown-form/updown-form.component.html
+++ b/src/app/updown-form/updown-form.component.html
@@ -20,7 +20,7 @@
       <div fxFlexOffset="2%" fxFlex="49%">
         <br>
         <md-select multiple [(ngModel)]="model.addons" name="addons" placeholder="Additional Packages (Movies, etc)" class="updown-full-width">
-          <md-option *ngFor="let addon of addons" [value]="addon.value">{{ addon.value }}</md-option>
+          <md-option *ngFor="let addon of addons" [value]="addon.name">{{ addon.name }}</md-option>
         </md-select>
       </div>
     </div>
